# fastgo

./: .gitmodules  CMakeLists.txt  README.md  build.sh  fastgo.sh  install.sh
src/: FileWriter.cpp  FileWriter.h  PathManager.cpp  PathManager.h  SearchEngine.cpp  SearchEngine.h  SelectItems.cpp  SelectItems.h  common.h  logger.cpp  logger.h  main.cpp  util.cpp  util.h
